--- a/Labs/Project/Project.ioc
+++ b/Labs/Project/Project.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
-FREERTOS.Tasks01=FloorSelectionT,1,128,FloorSelectionTaskHandle,Default,NULL,Dynamic,NULL,NULL;ElevatorMovemen,0,256,ElevatorMovementTaskHandle,Default,NULL,Dynamic,NULL,NULL;DisplayUpdateTa,-1,128,DisplayUpdateTaskHandle,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=FloorSelectionT,1,128,FloorSelectionTaskHandle,Default,NULL,Dynamic,NULL,NULL;ElevatorMovemen,0,256,ElevatorMovementTaskHandle,Default,NULL,Dynamic,NULL,NULL;DisplayUpdateTa,-1,128,DisplayUpdateTaskHandle,Default,NULL,Dynamic,NULL,NULL;EmergencyHandle,2,128,EmergencyTaskHandle,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=0
 File.Version=6
 KeepUserPlacement=false
